@@ -9,9 +9,27 @@ use Log::Report 'open-console-owner';
 use OpenConsole::Asset::Service   ();
 use OpenConsole::Util             qw(:validate);
 
+sub _blocking_reason($$)
+{	my ($account, $owner) = @_;
+	!$owner->isGroup || $owner->memberIsAdmin($account)
+    	or return __"You are not an administrator of this group.";
+
+	my $emails   = $account->assetSearch('emailaddrs', min_score => 1, owner => $owner);
+	my $webaddrs = $account->assetSearch('websites',   min_score => 1, owner => $owner);
+
+	   !$emails && !$webaddrs ? __"No proven email address, no proven website."
+	 : !$emails               ? __"Proven email address required."
+	 : !$webaddrs             ? __"Proven website required."
+	 : undef;
+}
+
 sub index()
 {   my $self = shift;
-	$self->render(template => 'services/index');
+
+	$self->render(
+		template        => 'services/index',
+		blocking_reason => \&_blocking_reason,
+	);
 }
 
 sub service(%)
@@ -19,7 +37,7 @@ sub service(%)
 	my $id       = $self->param('assetid');
 	my $account  = $self->account;
 	my $service  = $id eq 'new'
-	  ? OpenConsole::Asset::Service->create({owner => $account})
+	  ? OpenConsole::Asset::Service->create({owner => $account->findOwner($self->param('owner'))})
 	  : $account->asset(services => $id);
 
 warn "PAGE EDIT SERVICE $id, $service.";
@@ -35,15 +53,71 @@ sub _acceptService()
 
 	no warnings 'uninitialized';
 
-	my $endpoint = val_line $session->requiredParam('endpoint');
-	$endpoint eq 'missing' || is_valid_url $endpoint
-		or $session->addError(endpoint => __x"Invalid url.");
+	my $account  = $self->account;
+	my $owner    = $service->owner($account);
+	my %emails   = map +($_->id => $_), $account->assetSearch('emailaddrs', min_score => 1, owner => $owner);
+	my %webaddrs = map +($_->id => $_), $account->assetSearch('websites',   min_score => 1, owner => $owner);
+
+	my $endpoint = $session->requiredParam('endpoint-website');
+	$endpoint eq 'missing' || ! $webaddrs{$endpoint}
+		or $session->addError(endpoint => __x"Incorrect endpoint website.");
+
+	my $endpath  = val_line $session->optionalParam('endpoint') || '/';
+	$endpath !~ m!^https?\:!
+		or $session->addError(endpoint => __x"Provide only the path, no protocol or hostname.");
+
+	$endpath = "/$endpath" if $endpath !~ m!^/!;
+	$endpath !~ m!/\.\.?(?:/|$)!
+		or $session->addError(endpoint => __x"No '..', '.', or empty path components.");
+
+	$endpath !~ m/#/
+		or $session->addError(endpoint => __x"No fragment permitted in the path.");
+
+	my $contact  = $session->requiredParam('contact');
+	$contact eq 'missing' || ! $emails{$contact}
+		or $session->addError(contact => __x"Incorrect contact email.");
+
+	my $info_site = $session->optionalParam('info-site');
+	! $info_site || $webaddrs{$info_site}
+		or $session->addError('info-site' => __x"Incorrect info website.");
+
+	my $support  = $session->optionalParam('support') || '';
+	! $support   || $emails{$support}
+		or $session->addError(support => __x"Incorrect support email.");
+
+	my (%assets, @illegal);
+	foreach my $set (qw/emailaddrs websites/)
+	{   my $min    = $session->optionalParam("${set}_min") // 0;
+		my $max    = $session->optionalParam("${set}_max") // 100;
+	 	my $status = $session->optionalParam("${set}_status") // 'proven';
+		$assets{$set} = +{ min => $min, max => $max, status => $status };
+
+		push @illegal, $min if $min !~ /^[0-9]+$/;
+		push @illegal, $max if $max !~ /^[0-9]+$/;
+	}
+	!@illegal
+		or $session->addError(assets => __x"Illegal count values {values}.", values => \@illegal);
+
+	my $terms = val_line $session->optionalParam('terms');
+	! defined $terms || $terms =~ m!^https?://!i
+		or $session->addError(terms => __x"This URL must be absolute.");
 
 	$service->setData(
-		name        => val_line $session->requiredParam('name'),
-		description => val_text $session->optionalParam('descr'),
-		endpoint    => $endpoint,
-		status      => 'enabled',
+		name          => val_line $session->requiredParam('name'),
+		description   => val_text $session->optionalParam('descr'),
+		endpoint_ws   => $endpoint,
+		endpoint_path => $endpath,
+		endpoint      => $endpoint . $endpath,
+		contact       => $contact,
+		info_ws       => $info_site,
+		info_path     => val_line $session->optionalParam('info-path') || '/',
+		support       => $support,
+		needs_assets  => \%assets,
+		terms         => $terms,
+		license       => val_line $session->optionalParam('license'),
+		explain_user  => val_text $session->optionalParam('explain-user'),
+		explain_group => val_text $session->optionalParam('explain-group'),
+		status        => 'enabled',
 	);
 
 	#XXX here, we need to check whether the service provider owns the domain.
