@@ -1,73 +1,0 @@
-%# Parameters 'set' (proof set name), 'show_column' (name), 'show' (sub), 'add_text' (button text)
-
-% my $rows = begin
-%   my ($proofs, $editable) = @_;
-%   foreach my $proof (@$proofs) {
-    <tr data-proof="<%= $proof->id %>" data-editable="<%= $editable ? 'true' : 'false' %>" >
-      <td><%= $show->($proof) %></td>
-      <td><span class="badge <%== $c->proofStatusBgColorClass($proof) %>"><%= $c->proofStatusText($proof) %></span></td>
-      <td class="score"><%= $proof->score %></td>
-      <td class="edit">
-%     if($editable) {
-          <a href="<%= $proof->elemLink %>"><i class="fa-solid fa-pen" aria-label="edit"></i></a>
-          <a href="#" class="remove-proof"><i class="fa-solid fa-skull" aria-label="delete"></i></a>
-%     } else {
-          <a href="<%= $proof->elemLink %>"><i class="fa-solid fa-magnifying-glass" aria-label="view"></i></a>
-%     }
-      </td>
-     </tr>
-%   }
-% end
-
-% my $account = $c->account;
-
-  <script src="/assets/proof_list.js"></script>
-
-  <input type="hidden" name="set" value="<%= $set %>" />
-  <table class="table table-striped table-hover" id="prooflisttab">
-  <thead class="thead-light">
-    <tr>
-      <th><%= $show_column %></th>
-      <th>Status</th>
-      <th class="score">Score</th>
-      <th class="edit">Edit</th>
-    </tr>
-  </thead>
-  <tbody>
-
-%### Bound to account
-
-    <tr data-owner="<%= $account->id %>">
-      <th colspan="3"><i class="fa-solid fa-user" aria-hidden="true"></i> Personal properties</th>
-      <th class="edit"><i class="fa-solid fa-user-tie owner" aria-hidden="true"></i></th>
-    </tr>
-
-%= $rows->([ $account->proofs->for($set) ], 1);
-
-%### Bound to Identities
-
-% foreach my $identity ($account->identities) {
-
-    <tr data-owner="<%= $identity->id %>">
-      <th colspan="3"><i class="fa-solid fa-ghost" aria-hidden="true"></i> <%= $identity->role %></th>
-      <th class="edit"><i class="fa-solid fa-user-tie owner" aria-hidden="true"></i></th>
-    </tr>
-
-%=   $rows->([ $identity->proofs->for($set) ], 1);
-% }
-
-%### Bound to Groups
-
-% foreach my $group ($account->groups) {
-%    my $group_admin = $group->memberIsAdmin($account);
-
-    <tr data-owner="<%= $group->id %>" data-admin="<%= $group_admin ? 'true' : 'false' %>">
-      <th colspan="3"><i class="fa-solid fa-people-group" aria-hidden="true"></i> <%= $group->name %></th>
-      <th class="edit"><%== $group_admin ? '<i class="fa-solid fa-user-tie owner" aria-label="you are group owner"></i>' : '' %></th>
-    </tr>
-
-%=   $rows->([ $group->proofs->for($set) ], $group_admin);
-
-% }
-  </tbody>
-  </table>
