@@ -1,0 +1,84 @@
+%# Create the "offered services" table
+
+% my $account = $c->account;
+% my $set = 'services';
+
+% my $rows = begin
+%   my ($owner, $services, $editable) = @_;
+%   foreach my $service (@$services) {
+    <tr data-proof="<%= $service->id %>" data-editable="<%= $editable ? 'true' : 'false' %>" >
+      <td><%= $service->name %></td>
+      <td><span class="badge <%== $c->statusBgColorClass($service) %>"><%= $c->statusText($service) %></span></td>
+      <td class="edit">
+%     if($editable) {
+          <a href="<%= $service->elemLink %>"><i class="fa-solid fa-pen" aria-label="edit"></i></a>
+          <a href="#" class="remove-proof"><i class="fa-solid fa-skull" aria-label="delete"></i></a>
+%     } else {
+          <a href="<%= $service->elemLink %>"><i class="fa-solid fa-magnifying-glass" aria-label="view"></i></a>
+%     }
+      </td>
+    </tr>
+%   }
+
+    <tr><td colspan="4">
+%   if(my $blocked = $blocking_reason->($account, $owner)) {
+       <div class="form-text">You cannot create services yet: <%= lcfirst $blocked %></div>
+%   } else {
+       <div>
+          <a href="/dashboard/service/new?owner=<%= $owner->id %>" class="btn btn-primary"><i class="fa-solid fa-circle-plus" aria-hidden="true"></i> add service</a>
+       </div>
+%   }
+    </td></tr>
+% end
+
+% my $account = $c->account;
+
+  <script src="/assets/proof_list.js"></script>
+
+  <input type="hidden" name="set" value="<%= $set %>" />
+  <table class="table table-striped table-hover" id="prooflisttab">
+  <thead class="thead-light">
+    <tr>
+      <th>Service</th>
+      <th>Status</th>
+      <th class="edit">Edit</th>
+    </tr>
+  </thead>
+  <tbody>
+
+%### Bound to account
+
+    <tr data-owner="<%= $account->id %>">
+      <th colspan="2"><i class="fa-solid fa-user" aria-hidden="true"></i> Personal services</th>
+      <th class="edit"><i class="fa-solid fa-user-tie owner" aria-hidden="true"></i></th>
+    </tr>
+
+%= $rows->($account, [ $account->assets->for($set, undef) ], 1);
+
+%### Bound to Identities
+
+% foreach my $identity ($account->identities) {
+
+    <tr data-owner="<%= $identity->id %>">
+      <th colspan="2"><i class="fa-solid fa-ghost" aria-hidden="true"></i> <%= $identity->role %></th>
+      <th class="edit"><i class="fa-solid fa-user-tie owner" aria-hidden="true"></i></th>
+    </tr>
+
+%=   $rows->($identity, [ $account->assets->for($set, $identity) ], 1);
+% }
+
+%### Bound to Groups
+
+% foreach my $group ($account->groups) {
+%    my $group_admin = $group->memberIsAdmin($account);
+
+    <tr data-owner="<%= $group->id %>" data-admin="<%= $group_admin ? 'true' : 'false' %>">
+      <th colspan="2"><i class="fa-solid fa-people-group" aria-hidden="true"></i> <%= $group->name %></th>
+      <th class="edit"><%== $group_admin ? '<i class="fa-solid fa-user-tie owner" aria-label="you are group owner"></i>' : '' %></th>
+    </tr>
+
+%=   $rows->($group, [ $group->assets->for($set) ], $group_admin);
+
+% }
+  </tbody>
+  </table>
