@@ -2,6 +2,11 @@
 
 version 0.03:
 
+	Fixes:
+
+	Improvements:
+	- new form for Service definition.
+
 version 0.02: Wed 18 Sep 14:49:00 CEST 2024
 
 	Fixes:
